dev (#2)
* github setup

* update matsim slack client and emojis

* add pre commit hook to increase safety

* add pre commit hook to increase safety - add doc

* minor code updates